--- a/src/Components/LogDisplay/LogDisplay.scss
+++ b/src/Components/LogDisplay/LogDisplay.scss
@@ -49,10 +49,10 @@
 .log-display-delete {
     margin-right: auto;
     font-size: 9px;
-    margin-top: 2px;
-    margin-bottom: 2px;
+    margin-top: 2.6px;
+    margin-right: 2.6px;
+    text-shadow: 0 1px 0 rgba(0,0,0,.2);
 }
-
 
 //Collapsible Log Code
 // .collapsible-log-container::-webkit-scrollbar { background-color: transparent; }
