loading animation attempt 1 complete

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,11 @@
   width: 100vw;
   background-color: $primary-color;
 }
+.loading {
+  height: 100vh;
+  width: 100vw;
+  background-color: white;
+}
 
 body::-webkit-scrollbar {
   background-color: $primary-color;
