loading animation attempt 1.1 complete, pushing to server

--- a/src/Components/Loading/Loading.scss
+++ b/src/Components/Loading/Loading.scss
@@ -18,8 +18,8 @@
   .lds-dual-ring:after {
     content: " ";
     display: block;
-    width: 500px;
-    height: 500px;
+    width: 30vw;
+    height: 30vw;
     margin: 8px;
     border-radius: 50%;
     border: 30px solid #fff;
