--- a/src/Components/Auth/Auth.scss
+++ b/src/Components/Auth/Auth.scss
@@ -4,39 +4,69 @@
 
 //Auth.js
 .landing-login {
-    width: 340px;
-	height: 100px;
+    width: 100vw;
 	position: absolute;
 	top:0;
 	bottom: 0;
 	left: 0;
 	right: 0;
-	margin: auto;
+    margin: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
-.welcome {
-    color: $font-color;
-    font-size: 24px;
-    font-weight: bold;
-    position: absolute;
-    bottom: 300px;
-}
-.introduction {
-    color: $font-color;
-    font-size: 20px;
-    position: absolute;
-    bottom: 150px;
+.about-text {
+    width: 30%;
+    max-width: 300px;
+    height: 400px;
+    // background-color: black;
 }
 //Login.js
-.login-button {
-    font-size: 14px;
+
+.login-text-container {
+    text-align: center;
 }
-.click-register-button {
-    font-size: 14px;
+.login-text-container H1 {
+    font-size: 24px;
+    padding-bottom: 5px;
 }
 .login-container {
-    width: 330px;
-    padding-top: 10px;
-    margin-left: 10px;
+    width: 30%;
+    height: 400px;
+    max-width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    // background-color: red;
+}
+.form-container {
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    // background-color: black;
+}
+.login-input-container {
+    width: 90%;
+    margin-top: 10px;
+}
+.login-button {
+    width: 60%;    
+    margin-bottom: 30px;
+}
+.click-register-button {
+    width: 80%;   
+}
+.need-register-container {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 //Register.js
 .already-registered-button {
@@ -50,10 +80,23 @@
     margin-left: 10px;
 }
 .welcome-username {
-    color: $font-color;
     font-size: 30px;
     position: absolute;
     right: 20px;
     top: 20px;
 }
 
+@media screen and (max-width: 767px) {
+    .landing-login {
+        flex-direction: column;
+    }
+    .login-container {
+        width: 98%;
+    }
+    .about-text {
+        width: 98%;
+        margin-top: 10px;
+        height: 200px;
+        max-width: 500px;
+    }
+}
