--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,18 +1,56 @@
 body {
-    font-family: Calibri; 
+    font-family: "Roboto", sans-serif;
   } 
 
 $primary-color: #204051;
 $secondary-color: #3b6978;
 $darker-highlight: #84a9ac;
 $lighter-highlight: #cae8d5;
-$font-color: #cae8d5;
+$font-color: white;
 //Auxillary Colors
 $aux-1: #26596A;	// Main Primary color */
 $aux-2: #6C939F;
 $aux-3: #457585;
 $aux-4: #104050;
 $aux-5: #022835;
+
+p {
+    color: $font-color;
+}
+H1 {
+    color: $font-color;
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+}
+
+input {
+    font-family: "Roboto", sans-serif;
+    outline: 0;
+    background: #f2f2f2;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 14px;
+  }
+  button {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: $secondary-color;
+    border: 0;
+    padding: 15px;
+    color: $font-color;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+  }
+
+
+
 
 .delete-button {
     background-color: #ca3535;
@@ -26,27 +64,27 @@ $aux-5: #022835;
     background: #c43c35;
     box-shadow: inset 0 0 1.094em black, inset 0 .063em black, inset 0 -0.188em black, 0 .063em rgba(255,255,255,.4); 
 }
-button {
-    display: inline-block; 
-    padding: .3em .6em;
-    border: .094em solid $aux-1; 
-    border-radius: .625em;
-    background-color: $aux-2;
-    box-shadow: 0 .375em .313em -0.313em rgba(0,0,0,.8), inset 0 .063em rgba(255,255,255,.4), inset 0 -0.188em rgba(0,0,0,.15);
-    color: #FFF;
-    text-decoration: none;
-    text-transform: uppercase;
-    text-shadow: 0 .063em rgba(0,0,0,.3);
-    cursor: pointer;
-    font: bold 2rem sans-serif;
-}
-button:hover {
-    background-color: $aux-2;
-    box-shadow: 0 .125em rgba(255,255,255,.4), inset 0 .063em rgba(255,255,255,.4), inset 0 -0.188em $aux-3;
-}
-button:active {
-    box-shadow: inset 0 0 1.094em $aux-5, inset 0 .063em $aux-4, inset 0 -0.188em $aux-3, 0 .063em rgba(255,255,255,.4); 
-}
+// button {
+//     display: inline-block; 
+//     padding: .3em .6em;
+//     border: .094em solid $aux-1; 
+//     border-radius: .625em;
+//     background-color: $aux-2;
+//     box-shadow: 0 .375em .313em -0.313em rgba(0,0,0,.8), inset 0 .063em rgba(255,255,255,.4), inset 0 -0.188em rgba(0,0,0,.15);
+//     color: #FFF;
+//     text-decoration: none;
+//     text-transform: uppercase;
+//     text-shadow: 0 .063em rgba(0,0,0,.3);
+//     cursor: pointer;
+//     font: bold 2rem sans-serif;
+// }
+// button:hover {
+//     background-color: $aux-2;
+//     box-shadow: 0 .125em rgba(255,255,255,.4), inset 0 .063em rgba(255,255,255,.4), inset 0 -0.188em $aux-3;
+// }
+// button:active {
+//     box-shadow: inset 0 0 1.094em $aux-5, inset 0 .063em $aux-4, inset 0 -0.188em $aux-3, 0 .063em rgba(255,255,255,.4); 
+// }
 
 @mixin shadowbox-heavy($border-radius:10px, $box-shadow:5px 5px 15px  $darker-highlight, $background-color:$secondary-color) {
     border-radius: $border-radius;
