--- a/src/Components/Main/Main.scss
+++ b/src/Components/Main/Main.scss
@@ -1,7 +1,7 @@
 @import '../../variables.scss';
 
 .main {
-    background-color: $primary-color;
+    background-color: $background-color;
     width: 100vw;
     height: 100%;
 }
