improved css in main app

--- a/src/Components/UpdateBaby/UpdateBaby.scss
+++ b/src/Components/UpdateBaby/UpdateBaby.scss
@@ -7,14 +7,14 @@
     align-items: flex-end;
     justify-content: space-between;
     position: absolute;
-    bottom: 5px;
+    bottom: -5px;
     left: 5px;
 }
 .update-baby-button {
     font-size: 16px;  
 }
 .update-baby-input {
-
+    padding: 5px;
     margin-left: 5px;
     margin-right: 5px;
     width: 80px;
@@ -25,9 +25,9 @@
     // margin-left: 300px;
     
 }
-@media screen and (max-width: 767px) {
-    .update-baby-button {
-        position: absolute;
-        bottom: -106px;
-    }
-}
+// @media screen and (max-width: 767px) {
+//     .update-baby-button {
+//         position: absolute;
+//         bottom: -55px;
+//     }
+// }
