--- a/src/Components/AddLog/AddLog.scss
+++ b/src/Components/AddLog/AddLog.scss
@@ -1,99 +1,136 @@
 @import '../../variables.scss';
-.add-log-container{
-    margin-left:20px;
-    color: $font-color;
-    width: 370px;
-    @include shadowbox-light;
-    height: 100px;
-}
+//Main Parent
+    .add-log-container{
+        margin-left:20px;
+        color: $font-color;
+        width: 370px;
+        @include shadowbox-light;
+        height: 100px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+// Holds label-button-container and asleep-awake-container
+    .logging-container {
+        width: 90%;
+        height: 60px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
+        margin-bottom: 5px;
+        // background-color: red;
+    }
+    .label-button-container {
+        width: 98%;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 5px;
+
+    }
+// Two of these. Each hold an input field and a corresponding label.
+    .asleep-awake-container {
+        margin-left: 5px;
+        display: flex;
+        justify-content: flex-start;
+        height: 25px;
+        // background-color: green;
+        width: 99%;
+    }
 .add-log-label {
     font-size: 20px;
     padding: 7px;
-    margin-left: 5px;
+    margin-right: 5px;
     font-weight: bold;
 }
 .add-log-labels {
-    margin-left: 20px;
+    margin-left: 10px;
+    width: 80px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    // background-color: black;
 }
 .add-log-inputs {
-    margin-right: 100px;
+    margin-left: 0px;
+    padding: 4px;
+    width: 150px;
+    margin-right: 5px;
+    // background-color: blue;
 }
 .add-log-button{
-    margin-left: 293px;
-    margin-top: -20px;
+    // margin-left: 293px;
+    // margin-top: -88px;
     font-size: 14px;
-    position: relative;
+    // position: absolute;
 }
-.asleep-awake-container {
-    margin-left: 5px;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-}
+
+
 @media screen and (max-width: 767px) {
     .add-log-container {
         width: 95%;
-        margin-left:20px;
-        max-width: 400px; 
-        height: 110px;
-        position: relative;
+        margin-right:10px;
+        margin-left: 10px;
+        max-width: 370px; 
+        // height: 110px;
+        // position: relative;
     }
-    .add-log-button{
-        position: absolute;
-        margin: auto;
-        bottom: 7px;
-        right: 6px;
-    }
+    // .add-log-button{
+    //     position: absolute;
+    //     margin: auto;
+    //     bottom: 75px;
+    //     right: 6px;
+    // }
 }
-@media screen and (max-width: 550px) {
-    .add-log-container {
-        width: 95%;
-        max-width: 400px;
-        margin: 0 auto;
-        position: relative;
-    }
-    .add-log-button{
-        position: absolute;
-        margin: auto;
-        bottom: 0px;
-        right: 6px;
-    }
-    .asleep-awake-container {
-        font-weight: bold;
-        flex-direction: column;
-        padding-left: 10px;
-        padding-top: 12px;
-    }
-    .add-log-container {
-        width: 95%;
-        max-width: 400px;
-        margin: 0 auto;
-        height: 110px;
-        position: relative;
-    }
-    .add-log-label {
-        font-size: 20px;
-        margin-right: 20px;
-        font-weight: bold;
-        height: 30px;
-        width: 90px;
-        position: absolute;
-        top: 0px;
-        right: 0px;
-        margin-top: 0px;
-        margin-right: 0px;
-    }
-    .add-log-inputs {
-        margin-right: 0px;
-    }
-    .add-log-button{
-        margin-left: 260px;
-        margin-bottom: 10px;
-    }
-    .add-log-labels {
-        margin-left: 0px;
-    }
-    .add-log-inputs {
-        margin-left: 0px;
-    }
-}
+// @media screen and (max-width: 550px) {
+//     .add-log-container {
+//         width: 95%;
+//         max-width: 400px;
+//         margin: 0 auto;
+//         position: relative;
+//     }
+//     .add-log-button{
+//         position: absolute;
+//         margin: auto;
+//         bottom: 0px;
+//         right: 6px;
+//     }
+//     .asleep-awake-container {
+//         font-weight: bold;
+//         flex-direction: column;
+//         padding-left: 10px;
+//         padding-top: 12px;
+//     }
+//     .add-log-container {
+//         width: 95%;
+//         max-width: 400px;
+//         margin: 0 auto;
+//         height: 110px;
+//         position: relative;
+//     }
+//     .add-log-label {
+//         font-size: 20px;
+//         margin-right: 20px;
+//         font-weight: bold;
+//         height: 30px;
+//         width: 90px;
+//         position: absolute;
+//         top: 0px;
+//         right: 0px;
+//         margin-top: 0px;
+//         margin-right: 0px;
+//     }
+//     .add-log-inputs {
+//         margin-right: 0px;
+//     }
+//     .add-log-button{
+//         margin-left: 260px;
+//         margin-bottom: 10px;
+//     }
+//     .add-log-labels {
+//         margin-left: 0px;
+//     }
+//     .add-log-inputs {
+//         margin-left: 0px;
+//     }
+// }
