--- a/src/Components/BabyDisplay/BabyDisplay.scss
+++ b/src/Components/BabyDisplay/BabyDisplay.scss
@@ -21,8 +21,11 @@
     bottom: 5px;
     right: 5px;
 }
-@media screen and (max-width: 767px) {
-    .delete-baby-button {
-        bottom: -100px;
+@media screen and (max-width: 538px) {
+    // .delete-baby-button {
+    //     bottom: -50px;
+    // }
+    .baby-container {
+        height: 600px;
     }
 }
