--- a/src/Components/Charts/Charts.scss
+++ b/src/Components/Charts/Charts.scss
@@ -31,3 +31,11 @@
         margin-top: 0px;
     }
 }
+@media screen and (max-width: 538px) {
+    .slept-per-day {
+        height: 350px;
+    }
+    .chart {
+        height: 95%;
+    }
+}
