--- a/src/variables.scss
+++ b/src/variables.scss
@@ -64,27 +64,27 @@ input {
     background: #c43c35;
     box-shadow: inset 0 0 1.094em black, inset 0 .063em black, inset 0 -0.188em black, 0 .063em rgba(255,255,255,.4); 
 }
-// button {
-//     display: inline-block; 
-//     padding: .3em .6em;
-//     border: .094em solid $aux-1; 
-//     border-radius: .625em;
-//     background-color: $aux-2;
-//     box-shadow: 0 .375em .313em -0.313em rgba(0,0,0,.8), inset 0 .063em rgba(255,255,255,.4), inset 0 -0.188em rgba(0,0,0,.15);
-//     color: #FFF;
-//     text-decoration: none;
-//     text-transform: uppercase;
-//     text-shadow: 0 .063em rgba(0,0,0,.3);
-//     cursor: pointer;
-//     font: bold 2rem sans-serif;
-// }
-// button:hover {
-//     background-color: $aux-2;
-//     box-shadow: 0 .125em rgba(255,255,255,.4), inset 0 .063em rgba(255,255,255,.4), inset 0 -0.188em $aux-3;
-// }
-// button:active {
-//     box-shadow: inset 0 0 1.094em $aux-5, inset 0 .063em $aux-4, inset 0 -0.188em $aux-3, 0 .063em rgba(255,255,255,.4); 
-// }
+button {
+    display: inline-block; 
+    padding: .3em .6em;
+    border: .094em solid $aux-1; 
+    border-radius: .625em;
+    background-color: $aux-2;
+    box-shadow: 0 .375em .313em -0.313em rgba(0,0,0,.8), inset 0 .063em rgba(255,255,255,.4), inset 0 -0.188em rgba(0,0,0,.15);
+    color: #FFF;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-shadow: 0 .063em rgba(0,0,0,.3);
+    cursor: pointer;
+    font: bold 2rem sans-serif;
+}
+button:hover {
+    background-color: $aux-2;
+    box-shadow: 0 .125em rgba(255,255,255,.4), inset 0 .063em rgba(255,255,255,.4), inset 0 -0.188em $aux-3;
+}
+button:active {
+    box-shadow: inset 0 0 1.094em $aux-5, inset 0 .063em $aux-4, inset 0 -0.188em $aux-3, 0 .063em rgba(255,255,255,.4); 
+}
 
 @mixin shadowbox-heavy($border-radius:10px, $box-shadow:5px 5px 15px  $darker-highlight, $background-color:$secondary-color) {
     border-radius: $border-radius;
