--- a/src/variables.scss
+++ b/src/variables.scss
@@ -69,17 +69,16 @@ button {
     padding: .3em .6em;
     border: .094em solid $aux-1; 
     border-radius: .625em;
-    background-color: $aux-2;
+    background: $aux-2;
     box-shadow: 0 .375em .313em -0.313em rgba(0,0,0,.8), inset 0 .063em rgba(255,255,255,.4), inset 0 -0.188em rgba(0,0,0,.15);
     color: #FFF;
     text-decoration: none;
     text-transform: uppercase;
     text-shadow: 0 .063em rgba(0,0,0,.3);
     cursor: pointer;
-    font: bold 2rem sans-serif;
 }
 button:hover {
-    background-color: $aux-2;
+    background: $aux-2;
     box-shadow: 0 .125em rgba(255,255,255,.4), inset 0 .063em rgba(255,255,255,.4), inset 0 -0.188em $aux-3;
 }
 button:active {
@@ -116,3 +115,47 @@ button:active {
 // .btn-large {
 // 	@include button(20px 30px, 22px);
 // }
+
+.auth-button {
+    width: 60%;    
+    font-family: "Roboto", sans-serif;
+    outline: 0;
+    background: $secondary-color;
+    box-shadow: none;
+    border: 0;
+    padding: 15px;
+    color: $font-color;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+    border-radius: 0;
+    text-shadow: none;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    overflow: hidden;
+    position: relative;
+
+}
+.auth-button:after {
+    content: "";
+    background: #8DAAB4;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px!important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+}
+.auth-button:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s;
+}
+.auth-button:hover {
+    background: $secondary-color;
+    box-shadow: none;
+}
