--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -6,3 +6,9 @@
     width: 100%;
     background-color: $primary-color;
 }
+.welcome-username {
+    font-size: 30px;
+    position: absolute;
+    right: 20px;
+    top: 55px;
+}
