--- a/src/Components/AddLog/AddLog.scss
+++ b/src/Components/AddLog/AddLog.scss
@@ -39,7 +39,6 @@
         width: 99%;
     }
 .add-log-label {
-    font-size: 20px;
     padding: 7px;
     margin-right: 5px;
     font-weight: bold;
@@ -61,8 +60,9 @@
 .add-log-button{
     // margin-left: 293px;
     // margin-top: -88px;
-    font-size: 14px;
+    // font-size: 14px;
     // position: absolute;
+    // width: 100px;
 }
 
 
