--- a/src/Components/Auth/Auth.scss
+++ b/src/Components/Auth/Auth.scss
@@ -19,20 +19,22 @@
     width: 30%;
     max-width: 300px;
     height: 400px;
-    // background-color: black;
 }
 @media screen and (max-width: 767px) {
     .landing-login {
         flex-direction: column;
     }
     .login-container {
-        width: 98%;
+        width: 500px;
+        max-width: 500px;
     }
     .about-text {
         width: 98%;
         margin-top: 10px;
         height: 200px;
         max-width: 500px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
 //Login.js
@@ -44,7 +46,7 @@
     padding-bottom: 5px;
 }
 .login-container {
-    width: 30%;
+    // width: 30%;
     height: 400px;
     max-width: 300px;
     display: flex;
@@ -83,24 +85,16 @@
     align-items: center;
 }
 //Register.js
-.already-registered-button {
-    font-size: 14px;
-}
+
 //Logout.js
 .logout-button {
-    font-size: 14px;
     margin-top: 10px;
     margin-left: 10px;
 }
-.welcome-username {
-    font-size: 30px;
-    position: absolute;
-    right: 20px;
-    top: 20px;
-}
+
 //LoginFromHeader.js
 .header-login-container {
-    max-width: 480px;
+    max-width: 520px;
     height: 50px;
     display: flex;
     align-items: center;
@@ -122,18 +116,16 @@
     margin-bottom: 5px;
     // background-color: green;
 }
-.header-login-button {
-    font-size: 14px;
-}
+
 .header-click-register-button {
-    font-size: 14px;
     position: absolute;
     right: 20px;
-    top: 62px;
+    top: 63px;
+    width: 160px;
 }
 @media screen and (max-width: 662px) {
     .header-login-container {
-        height: 90px;
+        height: 100px;
         flex-direction: column;
         align-items: flex-start;
         margin-left: 5px;
@@ -150,13 +142,5 @@
         padding: 5px;
         margin: 0;
     }
-    
-    // .header-login-container {
-    //     width: 95%;
-    //     height: 80px;
-    //     background-color: red;
-    //     flex-direction: column;
-    //     justify-content: flex-start;
-    //     align-items: flex-start;
-    // }
+
 } 
