--- a/src/Components/Charts/Charts.scss
+++ b/src/Components/Charts/Charts.scss
@@ -19,23 +19,26 @@
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .slept-per-day {
-        width: 99%;
-    }
-}
+// @media screen and (min-width: 768px) and (max-width: 1023px) {
+//     .slept-per-day {
+//         width: 99%;
+//         background-color:red;
+//     }
+// }
 
-@media screen and (max-width: 375px) {
-    .slept-per-day {
-        width: 350px;
-        margin-top: 0px;
-    }
-}
-@media screen and (max-width: 538px) {
-    .slept-per-day {
-        height: 350px;
-    }
-    .chart {
-        height: 95%;
-    }
-}
+// @media screen and (max-width: 375px) {
+//     .slept-per-day {
+//         width: 300px;
+//         margin-top: 0px;
+//         background-color: green;
+//     }
+// }
+// @media screen and (max-width: 538px) {
+//     .slept-per-day {
+//         height: 350px;
+//         background-color: orange;
+//     }
+//     .chart {
+//         height: 95%;
+//     }
+// }
