--- a/src/Components/LogDisplay/LogDisplay.scss
+++ b/src/Components/LogDisplay/LogDisplay.scss
@@ -12,7 +12,7 @@
     margin: auto;
     margin-bottom: 8px;
     box-shadow: 1px 1px 5px $lighter-highlight;
-    height: 25px;
+    height: 30px;
     margin-left: 20px;
     text-align: center;
 }
@@ -30,28 +30,30 @@
     width: 25%;
     height: 80%;
     padding-left: 20px;
-    padding-top: 4px;
+    padding-top: 6px;
     cursor: pointer;
 }
 .log-display-awake {
     width: 25%;
     height: 80%;
-    padding-top: 4px;
+    padding-top: 6px;
     cursor: pointer;
 }
 .log-display-length {
     width: 25%;
     height: 80%;
     flex-grow: 1;
-    padding-top: 4px;
+    padding-top: 6px;
     cursor: pointer;
 }
 .log-display-delete {
-    margin-right: auto;
-    font-size: 9px;
-    margin-top: 2.6px;
-    margin-right: 2.6px;
-    text-shadow: 0 1px 0 rgba(0,0,0,.2);
+    // margin-right: auto;
+    font-size: 10px;
+    height: 20px;
+    width: 50px;
+    margin-top: 3.7px;
+    margin-right: 3.7px;
+    // text-shadow: 0 1px 0 rgba(0,0,0,.2);
 }
 
 //Collapsible Log Code
@@ -94,7 +96,7 @@
     border-top: none;
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
-    background-color: $secondary-color;
+    background-color: $primary-color;
 }
 .collapsible-log-container {
     width: 97%;
