--- a/src/Components/UpdateBaby/UpdateBaby.scss
+++ b/src/Components/UpdateBaby/UpdateBaby.scss
@@ -1,27 +1,27 @@
 @import '../../variables.scss';
 
 .update-baby-container {
-    width: 270px;
-    height: 30px;
+    // width: 335px;
+    height: 40px;
     display: flex;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: space-between;
-    position: absolute;
-    bottom: -5px;
-    left: 5px;
+    // position: absolute;
+    // bottom: -5px;
+    // left: 5px;
 }
-.update-baby-button {
-    font-size: 16px;  
-    margin-bottom: 10px;
+.edit-baby-button {
+    width: 140px;
+    // margin-bottom: 66px;
+    // margin-left: -5px;
 }
 .update-baby-input {
-    padding: 5px;
+    padding: 9px;
     margin-left: 5px;
     margin-right: 5px;
-    width: 80px;
+    width: 100px;
 }
 .cancel-update-button {
-    font-size: 16px;
     // margin-bottom: 13px;
     // margin-left: 300px;
     
