--- a/src/Components/LogDisplay/LogDisplay.scss
+++ b/src/Components/LogDisplay/LogDisplay.scss
@@ -1,5 +1,6 @@
 @import '../../variables.scss';
-
+.log-display-container {
+}
 .log-display {
     border: 1px;
     border-color: white;
@@ -7,55 +8,66 @@
     border-style: solid;
     color: $font-color;
     display: flex;
-    justify-content: space-between;
-    width: 99%;
-    margin: auto;
+    justify-content: flex-start;
+    align-items: center;
+    // width: 99%;
+    margin-left: 10px;
+    max-width: 600px;
     margin-bottom: 8px;
     box-shadow: 1px 1px 5px $lighter-highlight;
     height: 30px;
-    margin-left: 20px;
+    // margin-left: 20px;
     text-align: center;
+    // background-color: grey;
 }
 .log-display-labels {
+    // background-color: black;
     color: $font-color;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
+    // align-items: center;
     width: 99%;
-    margin: auto;
-    margin-top: 10px;
+    // margin: auto;
+    margin-top: 5px;
     margin-bottom: 5px;
+    padding-right: 20px;
+    // margin-left: 20px;
     font-size: 20px;
 }
 .log-display-asleep {
-    width: 25%;
+    width: 150px;
     height: 80%;
-    padding-left: 20px;
+    // padding-left: 20px;
     padding-top: 6px;
-    cursor: pointer;
+    // background-color: red;
+    margin-left: 51px;
 }
 .log-display-awake {
-    width: 25%;
+    width: 150px;
     height: 80%;
     padding-top: 6px;
-    cursor: pointer;
+    // background-color: blue;
+    margin-left: 50px;
 }
 .log-display-length {
-    width: 25%;
+    width: 80px;
     height: 80%;
-    flex-grow: 1;
+    // flex-grow: 1;
     padding-top: 6px;
-    cursor: pointer;
+    // background-color: green;
+    margin-left: 50px;
+
 }
 .log-display-delete {
     // margin-right: auto;
     font-size: 10px;
     height: 20px;
     width: 50px;
-    margin-top: 3.7px;
-    margin-right: 3.7px;
+    // margin-top: 3.7px;
+    margin-left: 3.7px;
+    // background-color: pink;
     // text-shadow: 0 1px 0 rgba(0,0,0,.2);
 }
-
 //Collapsible Log Code
 // .collapsible-log-container::-webkit-scrollbar { background-color: transparent; }
 .collapsible-log-container::-webkit-scrollbar {
@@ -84,33 +96,40 @@
 .click-to-collapse {
     cursor: pointer; 
     padding-top: 1px;
-    text-align: center;
+    text-align: right;
     height: 24px;
     position: absolute;
-    width: 150px;
+    width: 130px;
     margin: auto;
-    left: 0;
-    right: 0;
+    left: 10px;
+    
     border: solid white 2px;
     border-radius: 10px;
     border-top: none;
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
     background-color: $primary-color;
+    z-index: 1;
+    border-left: 0px;
+    border-bottom-left-radius: 0px;
+    padding-right: 5px;
+}
+.click-to-collapse:hover {
+    background: #274e63;
+
 }
 .collapsible-log-container {
-    width: 97%;
-    margin: auto;
+    max-width: 640px;
     margin-top: 10px;
+    margin-left: 10px;
     @include shadowbox-light;
     color: $font-color;
     max-height: 280px;
-    overflow-y: auto
+    overflow-y: auto;
 }
 Table {
     width: 99%;
 }
-
 .sort-direction {
     display: inline-block;
     height: 0;
@@ -120,10 +139,108 @@ Table {
     margin-left: 5px;
     
     &.asc {
-      border-bottom: 8px solid $secondary-color !important;
+        border-bottom: 8px solid white !important;
     }
     
     &.desc {
-      border-top: 8px solid $secondary-color !important;
+        border-top: 8px solid white !important;
     }
-  }
+}
+
+.sort-asleep {
+    height: 25px;
+    font-size: 16px;
+    -webkit-transition: all 0.3 ease;
+    -webkit-transition-duration: 0.4s;
+    transition: all 0.3 ease;
+    transition-duration: 0.4s;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+}
+.sort-asleep:after {
+    content: "";
+    background: $button-click;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px!important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+}
+.sort-asleep:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s;
+}
+.sort-asleep:hover {
+    background: #4a6a7b;
+}
+
+.sort-awake {
+    height: 25px;
+    font-size: 16px;
+    -webkit-transition: all 0.3 ease;
+    -webkit-transition-duration: 0.4s;
+    transition: all 0.3 ease;
+    transition-duration: 0.4s;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+}
+.sort-awake:after {
+    content: "";
+    background: $button-click;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px!important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+}
+.sort-awake:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s;
+}
+.sort-awake:hover {
+    background: #4a6a7b;
+}
+.sort-length {
+    height: 25px;
+    font-size: 16px;
+    -webkit-transition: all 0.3 ease;
+    -webkit-transition-duration: 0.4s;
+    transition: all 0.3 ease;
+    transition-duration: 0.4s;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+}
+.sort-length:after {
+    content: "";
+    background: $button-click;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px!important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+}
+.sort-length:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s;
+}
+.sort-length:hover {
+    background: #4a6a7b;
+}
