--- a/src/Components/AddLog/AddLog.scss
+++ b/src/Components/AddLog/AddLog.scss
@@ -30,14 +30,14 @@
 
     }
 // Two of these. Each hold an input field and a corresponding label.
-    .asleep-awake-container {
-        margin-left: 5px;
-        display: flex;
-        justify-content: flex-start;
-        height: 25px;
-        // background-color: green;
-        width: 99%;
-    }
+.asleep-awake-container {
+    margin-left: 5px;
+    display: flex;
+    justify-content: flex-start;
+    height: 25px;
+    // background-color: green;
+    width: 99%;
+}
 .add-log-label {
     padding: 7px;
     margin-right: 5px;
@@ -64,9 +64,18 @@
     // position: absolute;
     // width: 100px;
 }
-
+.identifier-log-container {
+    display: flex;
+}
+.identifier-label {
+    margin-left: 10px;
+    margin-top: 5px;
+}
 
 @media screen and (max-width: 767px) {
+    .identifier-log-container {
+        flex-direction: column;
+    }
     .add-log-container {
         width: 95%;
         margin-right:10px;
@@ -75,6 +84,7 @@
         // height: 110px;
         // position: relative;
     }
+
     // .add-log-button{
     //     position: absolute;
     //     margin: auto;
