--- a/src/Components/LogDisplay/LogDisplay.scss
+++ b/src/Components/LogDisplay/LogDisplay.scss
@@ -1,4 +1,7 @@
 @import '../../variables.scss';
+.log-display-container {
+    // background-color: black;
+}
 
 .log-display {
     border: 1px;
@@ -7,11 +10,11 @@
     border-style: solid;
     color: $font-color;
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center;
     // width: 99%;
-    margin-left: 10px;
-    max-width: 600px;
+    margin-left: 5px;
+    max-width: 700px;
     margin-bottom: 8px;
     box-shadow: 1px 1px 5px $lighter-highlight;
     height: 30px;
@@ -25,13 +28,15 @@
     display: flex;
     justify-content: flex-end;
     // align-items: center;
-    width: 99%;
+    max-width: 700px;
+    // width: 99%;
     // margin: auto;
+    margin-left: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
-    padding-right: 5px;
+    // padding-right: 5px;
     // margin-left: 20px;
-    font-size: 20px;
+    // font-size: 20px;
 }
 .log-display-asleep {
     width: 150px;
@@ -39,14 +44,14 @@
     // padding-left: 20px;
     padding-top: 6px;
     // background-color: red;
-    margin-left: 61px;
+    margin-left: 75px;
 }
 .log-display-awake {
     width: 150px;
     height: 80%;
     padding-top: 6px;
     // background-color: blue;
-    margin-left: 50px;
+    margin-left: 30px;
 }
 .log-display-length {
     width: 80px;
@@ -54,8 +59,15 @@
     // flex-grow: 1;
     padding-top: 6px;
     // background-color: green;
-    margin-left: 50px;
-
+    margin-left: 30px;
+}
+.log-display-name {
+    width: 100px;
+    height: 80%;
+    padding-top: 6px;
+    margin-left: 30px;
+    // background-color: orange;
+    // font-size: 16px;
 }
 .log-display-delete {
     // margin-right: auto;
@@ -64,13 +76,14 @@
     width: 50px;
     // margin-top: 3.7px;
     margin-left: 3.7px;
-    // background-color: pink;
+    background-color: pink;
     // text-shadow: 0 1px 0 rgba(0,0,0,.2);
 }
 //Collapsible Log Code
 // .collapsible-log-container::-webkit-scrollbar { background-color: transparent; }
 .collapsible-log-container::-webkit-scrollbar {
     width: 12px;
+    // background-color: orange;
 }
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0); 
@@ -117,13 +130,14 @@
 
 }
 .collapsible-log-container {
-    max-width: 640px;
+    max-width: 710px;
     margin-top: 10px;
     margin-left: 10px;
     @include shadowbox-light;
     color: $font-color;
     max-height: 280px;
     overflow-y: auto;
+    // background-color: yellow;
 }
 Table {
     width: 99%;
