working on functionality to allow primary to remove shared babies

--- a/src/Components/LogDisplay/LogDisplay.scss
+++ b/src/Components/LogDisplay/LogDisplay.scss
@@ -76,7 +76,7 @@
     width: 50px;
     // margin-top: 3.7px;
     margin-left: 3.7px;
-    background-color: pink;
+    // background-color: pink;
     // text-shadow: 0 1px 0 rgba(0,0,0,.2);
 }
 //Collapsible Log Code
@@ -255,4 +255,16 @@ Table {
 }
 .sort-length:hover {
     background: #4a6a7b;
+}
+
+// SHARED BABIES
+.revoke-sharing{
+    // margin-right: auto;
+    font-size: 10px;
+    height: 20px;
+    width: 50px;
+    // margin-top: 3.7px;
+    // margin-left: 3.7px;
+    // background-color: pink;
+    // text-shadow: 0 1px 0 rgba(0,0,0,.2);
 }
