--- a/src/Components/Auth/Auth.scss
+++ b/src/Components/Auth/Auth.scss
@@ -73,15 +73,16 @@
     margin-bottom: 30px;
 }
 .click-register-button {
-    width: 80%;   
-    
+    width: 120px;   
+    height: 25px;
+    font-size: 11px;
 }
 .need-register-container {
     width: 100%;
     height: 70px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    // justify-content: space-between;
     align-items: center;
 }
 //Register.js
