--- a/src/Components/BabyDisplay/BabyDisplay.scss
+++ b/src/Components/BabyDisplay/BabyDisplay.scss
@@ -26,38 +26,157 @@
     margin-top: 10px;
 }
 .delete-baby-button {
-    // position: absolute;
-    // bottom: 60px;
-    // right: 9px;
     width: 121px;
     height: 36px;
-}
-@media screen and (max-width: 538px) {
-    .baby-container {
-        height: 600px;
-    }
-}
-.guardian-false {
-    // background-color: rgba(255, 255, 255, 0.2);
-    // position: absolute;
-    // top: 0;
-    // right: 0;
-    // left: 0;
-    // bottom: 0;
-    // margin: auto;
-    // width: 80%;
-    // height: 30%;
-    // // border-radius: 100px;
-    // box-shadow: 0 0 5px 10px rgba(255, 255, 255, 0.2);
 }
 .false-container {
     font-style: italic;
     font-weight: 100;
     color: grey;
 }
-.tab-baby-name {}
-// .guardian-status {
-//     background-color: green;
-    
-// }
+.shared-scroll-container {
+    // background-color: red;
+    position: absolute;
+    top: 70px;
+    right: 10px;
+    z-index: 1;
+    // width: 1000px;
+}
+.collapsible-shared-container {
+    // background-color: grey;
+    // max-width: 320px;
+    max-height: 400px;   
+    overflow-y: auto;
+    @include shadowbox-light;
+}
 
+.shared-collapse-button {
+    color: $font-color;
+    cursor: pointer; 
+    padding-top: 1px;
+    text-align: center;
+    height: 20px;
+    width: 80px;
+    margin: auto;
+    border: solid white 2px;
+    border-radius: 10px;
+    border-top: none;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-right: 0px;
+    background-color: $primary-color;
+    position: absolute;
+    right: 0px;
+    z-index: 1;
+}
+.shared-collapse-button:hover {
+    background: #274e63;
+
+}
+.shared-display-container {
+    // background-color: pink;
+    // width: 300px;
+    color: $font-color;
+}
+.shared-expand-button {
+    background: $button-background;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.12), 0 2px 3px rgba(0,0,0,0.24);
+    color: $font-color;
+    text-transform: uppercase;
+    font-size: 16px;
+    height: 40px;
+    width: 70px;
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
+    cursor: pointer;
+}
+.shared-expand-button:hover {
+    background: $button-hover;
+    box-shadow: none;
+}
+.revoke-sharing{
+    // margin-right: auto;
+    font-size: 10px;
+    height: 20px;
+    width: 50px;
+    margin-top: 3.7px;
+    margin-right: 3.7px;
+    // background-color: pink;
+    // text-shadow: 0 1px 0 rgba(0,0,0,.2);
+}
+.shared-display {
+    border: 1px;
+    color: $font-color;
+    border-color: white;
+    border-radius: 5px;
+    border-style: solid;
+    margin-bottom: 8px;
+    height: 30px;
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 5px;
+    margin-right: 5px;
+    // box-shadow: 1px 1px 5px $lighter-highlight;
+}
+.shared-display-labels {
+    color: $font-color;
+    display: flex;
+    justify-content: flex-start;
+    // background-color: green;
+    // margin-left: 5px;
+    // margin-top: 5px;
+    // margin-bottom: 5px;
+}
+.shared-display-name {
+    width: 100px;
+    height: 80%;
+    // padding-left: 20px;
+    padding-top: 6px;
+    // background-color: red;
+    // margin-left: 5px;
+    text-align: left;
+}
+.shared-display-email {
+    width: 190px;
+    height: 80%;
+    padding-top: 6px;
+    // background-color: blue;
+    // margin-left: 15px;
+    text-align: left;
+}
+.collapsible-shared-container::-webkit-scrollbar {
+    width: 12px;
+    // background-color: orange;
+}
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0); 
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: $lighter-highlight;
+    -webkit-box-shadow: inset 0 0 6px $primary-color; 
+}
+.scroll-container {
+    position: relative;
+}
+// @media screen and (max-width: 538px) {
+//     .baby-container {
+//         height: 600px;
+//     }
+// }
+// @media screen and (max-width: 805) {
+//     .baby-container {
+//         height: 600px;
+//     }
+// }
+@media screen and (max-width: 800px) {
+    .shared-scroll-container {
+        // background-color: red;
+        position: fixed;
+        top: 10px;
+        right: 10px;
+    }
+}
