--- a/src/Components/LogDisplay/LogDisplay.scss
+++ b/src/Components/LogDisplay/LogDisplay.scss
@@ -1,6 +1,7 @@
 @import '../../variables.scss';
 .log-display-container {
     // background-color: black;
+    height: 400px;
 }
 
 .log-display {
@@ -14,7 +15,7 @@
     align-items: center;
     // width: 99%;
     margin-left: 5px;
-    max-width: 700px;
+    max-width: 690px;
     margin-bottom: 8px;
     box-shadow: 1px 1px 5px $lighter-highlight;
     height: 30px;
@@ -27,16 +28,29 @@
     color: $font-color;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     // align-items: center;
     max-width: 700px;
     // width: 99%;
     // margin: auto;
-    margin-left: 5px;
+    // margin-right: 0px;
     margin-top: 5px;
     margin-bottom: 5px;
     // padding-right: 5px;
     // margin-left: 20px;
     // font-size: 20px;
+}
+.log-label-asleep {
+    background-color: red;
+}
+.log-label-awake {
+    background-color: green;
+}
+.log-label-length {
+    background-color: blue;
+}
+.log-label-email {
+    background-color: orange;
 }
 .log-display-asleep {
     width: 150px;
@@ -142,6 +156,8 @@
 Table {
     width: 99%;
 }
+
+//SORTING CONTROLS
 .sort-direction {
     display: inline-block;
     height: 0;
@@ -158,7 +174,6 @@ Table {
         border-top: 8px solid white !important;
     }
 }
-
 .sort-asleep {
     height: 25px;
     font-size: 16px;
@@ -257,14 +272,3 @@ Table {
     background: #4a6a7b;
 }
 
-// SHARED BABIES
-.revoke-sharing{
-    // margin-right: auto;
-    font-size: 10px;
-    height: 20px;
-    width: 50px;
-    // margin-top: 3.7px;
-    // margin-left: 3.7px;
-    // background-color: pink;
-    // text-shadow: 0 1px 0 rgba(0,0,0,.2);
-}
