--- a/src/Components/UpdateBaby/UpdateBaby.scss
+++ b/src/Components/UpdateBaby/UpdateBaby.scss
@@ -5,10 +5,10 @@
     // position: absolute;
     // bottom: -5px;
     // left: 5px;
-    background-color: red;
+    // background-color: red;
 }
 .updating-container {
-    background-color: black;
+    // background-color: black;
     display: flex;
     justify-content: space-between;
     width: 420px;
