button css specifity updated, which fixed the sweetalert2 button bug

--- a/src/Components/Auth/Auth.scss
+++ b/src/Components/Auth/Auth.scss
@@ -74,8 +74,8 @@
 }
 .click-register-button {
     width: 120px;   
-    height: 25px;
-    font-size: 11px;
+    height: 25px !important;
+    font-size: 11px !important;
 }
 .need-register-container {
     width: 100%;
