--- a/src/Components/Loading/Loading.scss
+++ b/src/Components/Loading/Loading.scss
@@ -1,7 +1,7 @@
 @import '../../variables.scss';
 
 .loading {
-    background-color: $secondary-color;
+    background-color: $primary-color;
     height: 65vh;
     width: 99%;
     position: relative;
